--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "husky",
-  "version": "0.13.1",
+  "version": "0.14.0",
   "description": "Prevents bad commit or push (git hooks, pre-commit/precommit, pre-push/prepush, post-merge/postmerge and all that stuff...)",
   "main": "index.js",
   "scripts": {
     "test": "mocha && standard",
+    "test-only": "mocha",
     "precommit": "npm test",
     "install": "node ./bin/install.js",
     "uninstall": "node ./bin/uninstall.js"
@@ -44,7 +45,8 @@
     "chalk": "^1.1.3",
     "find-parent-dir": "^0.3.0",
     "is-ci": "^1.0.9",
-    "normalize-path": "^1.0.0"
+    "normalize-path": "^1.0.0",
+    "yarn-or-npm": "^2.0.3"
   },
   "standard": {
     "env": {
